[Bug #139551663] Fix UI overlap issue

--- a/static/css/settings.css
+++ b/static/css/settings.css
@@ -85,3 +85,19 @@ table#team-members-table > tbody > tr > th {
 .edit-checks:hover {
     background: #f9f9f9;
 }
+
+#team-members-table a{
+    text-decoration: none;
+}
+
+#team-members-table a.member-remove{
+    line-height: 40px;
+    font-size: 20px;
+    color: #555;
+}
+
+#team-members-table a.member-remove:hover{
+    color: #999;
+}
+
+
